# KOShooter

./: .gitignore  CMakeLists.txt  KOShooter  README.md  SDL_shooter
src/: App.cpp  App.h  Debris.cpp  Debris.h  Delegate.h  Draw.cpp  Draw.h  Entity.cpp  Entity.h  Explosion.cpp  Explosion.h  Init.cpp  Init.h  Input.cpp  Input.h  SoundManager.cpp  SoundManager.h  Stage.cpp  Stage.h  Star.cpp  Star.h  TextManager.cpp  TextManager.h  Util.cpp  Util.h  common.h  defs.h  draw.c  draw.h  init.c  init.h  input.c  input.h  main.c  main.cpp  sound.c  sound.h  stage.c  stage.h  structs.h  (+4 more)
